Implemented rudimentary version of item viewing fragment using early version of Chloromedia

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,9 @@
     tools:context="com.brandonio21.phyll.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+    <fragment android:name="com.brandonio21.phyll.Fragments.MediaGrid"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:id="@+id/main_mediagrid"/>
+
 </RelativeLayout>
